made iframe correct and spacing at bottom of resume

--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,14 @@
     overflow:initial;
     border-radius: 4px;
 }
+#spaceholder {
+    height:30px;
+}
 #resume {
     height:800px;
+}
+#resumeHolder {
+    border-bottom:20px;
 }
 
 body {
